Jython NEWS

For more details, please see https://hg.python.org/jython

Developement tip
  Bugs fixed
    - [ 2662 ] IllegalAccessException accessing public abstract method via PyReflectedFunction
    - [ 2501 ] JAVA_STACK doesn't work (fixed for Windows launcher only)
    - [ 1866 ] Parser does not have mismatch token error messages caught by BaseRecognizer
    - [ 1930 ] traceback raises exception in os.py
    - [ 2419 ] List expected failures by OS platform in regrtest.py
    - [ 2611 ] mkdir() operation in /Lib/os.py has different behavior when running in Docker container
    - [ 2655 ] __findattr__ is final (update documentation)
    - [ 2646 ] Test failure in test_os_jy after utf-8 decode
    - [ 2469 ] jython launcher fails on Windows if JAVA_HOME is set
    - [ 2650 ] Detail message is not set on PyException from PythonInterpreter
    - [ 2403 ] VerifyError when implementing interfaces containing default methods (Java 8)

Jython 2.7.2a1
  Bugs fixed
    - [ 2632 ] Handle unicode data appropriately in csv module
    - [ 2638 ] str not default-decoded in str-unicode operations
    - [ 2622 ] json dumps error (use of AbstractDict)
    - [ 2607, 2620 ] Error loading Python DLL (error code 14001)
    - [ 2612 ] NPE while trying to load class
    - [ 2609 ] PyType.fromClass publication race (discovered in strptime and re)
    - [ 2608 ] Encoding problems with non-ascii host name
    - [ 2599 ] Cannot handle network paths under Windows
    - [ 2600 ] subprocess doesn't have _args_from_interpreter_flags (blocks support for multiprocessing)
    - [ 2602 ] NumberFormatException in terminal on OSX 10.12.5 (ncurses related)

  New Features
    - Updated JLine to 2.14.5

Jython 2.7.1
  same as 2.7.1rc3

Jython 2.7.1rc3
  Bugs fixed
    - [ 2597 ] PySystemState.sysClosers requires cleanup to prevent memory leak
    - [ 2593 ] file.write(obj) raises NullPointerException on type error
    - [ 2592 ] Line breaks in exceptions are wrong (characters being backslash-escaped)
